# immc-2022

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
public/: index.html
src/: App.svelte  app.rs  beano.rs  common.rs  main.rs  plane.rs  simulation.rs
src-tauri/: Cargo.toml  output.txt  tauri.conf.json  yes.txt
src-tauri/src/: beano.rs  beno.rs  commands.rs  common.rs  generator.rs  main.rs  plane.rs  simulation.rs
src-tauri/src/beano/: beanoz.rs  kind.rs  tests.rs
src-tauri/src/plane/: error.rs  tests.rs
src-tauri/src/simulation/: tests.rs
src/beano/: kind.rs
src/components/: GridRender.svelte
src/lib/: GridTile.ts
src/plane/: error.rs
